--- a/config.h.in
+++ b/config.h.in
@@ -9,6 +9,13 @@
 /* Define if you have <sys/wait.h> that is POSIX.1 compatible.  */
 #undef HAVE_SYS_WAIT_H
 
+/* Define if your struct tm has tm_zone.  */
+#undef HAVE_TM_ZONE
+
+/* Define if you don't have tm_zone but do have the external array
+   tzname.  */
+#undef HAVE_TZNAME
+
 /* Define if major, minor, and makedev are declared in <mkdev.h>.  */
 #undef MAJOR_IN_MKDEV
 
@@ -55,9 +62,6 @@
    standard headers don't define.  */
 #undef uint64_t
 
-/* Define to `int' if standard headers don't define.  */
-#undef int32_t
-
 /* The number of bytes in a uint8_t.  */
 #define SIZEOF_UINT8_T 0
 
@@ -69,9 +73,6 @@
 
 /* The number of bytes in a uint64_t.  */
 #define SIZEOF_UINT64_T 0
-
-/* Define if you have the getopt_long function.  */
-#undef HAVE_GETOPT_LONG
 
 /* Define if you have the mkstemp function.  */
 #undef HAVE_MKSTEMP
@@ -88,17 +89,8 @@
 /* Define if you have the <fcntl.h> header file.  */
 #undef HAVE_FCNTL_H
 
-/* Define if you have the <getopt.h> header file.  */
-#undef HAVE_GETOPT_H
-
-/* Define if you have the <inttypes.h> header file.  */
-#undef HAVE_INTTYPES_H
-
 /* Define if you have the <locale.h> header file.  */
 #undef HAVE_LOCALE_H
-
-/* Define if you have the <stdint.h> header file.  */
-#undef HAVE_STDINT_H
 
 /* Define if you have the <sys/mman.h> header file.  */
 #undef HAVE_SYS_MMAN_H
@@ -120,12 +112,6 @@
 
 /* Version number of package */
 #undef VERSION
-
-/* HAVE_TM_ZONE */
-#undef HAVE_TM_ZONE
-
-/* HAVE_TZNAME */
-#undef HAVE_TZNAME
 
 /* Number of bits in a file offset, on hosts where this is settable. */
 #undef _FILE_OFFSET_BITS
