--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -124,12 +124,11 @@ include_HEADERS = magic.h
 
 bin_PROGRAMS = file
 
-MAGIC = $(datadir)/magic
 AM_CPPFLAGS = -DMAGIC='"$(MAGIC)"'
 
 libmagic_la_SOURCES = magic.c apprentice.c softmagic.c ascmagic.c \
 	compress.c is_tar.c readelf.c print.c fsmagic.c \
-	funcs.c file.h names.h patchlevel.h readelf.h tar.h
+	funcs.c file.h names.h patchlevel.h readelf.h tar.h apptype.c
 
 libmagic_la_LDFLAGS = -version-info 1:0:0
 
@@ -143,7 +142,8 @@ LTLIBRARIES = $(lib_LTLIBRARIES)
 
 libmagic_la_LIBADD =
 am_libmagic_la_OBJECTS = magic.lo apprentice.lo softmagic.lo ascmagic.lo \
-	compress.lo is_tar.lo readelf.lo print.lo fsmagic.lo funcs.lo
+	compress.lo is_tar.lo readelf.lo print.lo fsmagic.lo funcs.lo \
+	apptype.lo
 libmagic_la_OBJECTS = $(am_libmagic_la_OBJECTS)
 bin_PROGRAMS = file$(EXEEXT)
 PROGRAMS = $(bin_PROGRAMS)
@@ -157,11 +157,12 @@ DEFAULT_INCLUDES =  -I. -I$(srcdir) -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
 @AMDEP_TRUE@DEP_FILES = ./$(DEPDIR)/apprentice.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/ascmagic.Plo ./$(DEPDIR)/compress.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/file.Po ./$(DEPDIR)/fsmagic.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/funcs.Plo ./$(DEPDIR)/is_tar.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/magic.Plo ./$(DEPDIR)/print.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/readelf.Plo ./$(DEPDIR)/softmagic.Plo
+@AMDEP_TRUE@	./$(DEPDIR)/apptype.Plo ./$(DEPDIR)/ascmagic.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/compress.Plo ./$(DEPDIR)/file.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/fsmagic.Plo ./$(DEPDIR)/funcs.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/is_tar.Plo ./$(DEPDIR)/magic.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/print.Plo ./$(DEPDIR)/readelf.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/softmagic.Plo
 COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
 	$(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 LTCOMPILE = $(LIBTOOL) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) \
@@ -254,6 +255,7 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/apprentice.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/apptype.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ascmagic.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/compress.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/file.Po@am__quote@
@@ -510,6 +512,7 @@ uninstall-am: uninstall-binPROGRAMS uninstall-includeHEADERS \
 	uninstall-includeHEADERS uninstall-info-am \
 	uninstall-libLTLIBRARIES
 
+include "../Makefile.inc"
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
