--- a/Makefile.in
+++ b/Makefile.in
@@ -140,10 +140,10 @@ RECURSIVE_TARGETS = info-recursive dvi-recursive pdf-recursive \
 	all-recursive install-data-recursive install-exec-recursive \
 	installdirs-recursive install-recursive uninstall-recursive \
 	check-recursive installcheck-recursive
-DIST_COMMON = README Makefile.am Makefile.in acinclude.m4 aclocal.m4 \
-	config.guess config.h.in config.sub configure configure.in \
-	depcomp install-sh ltcf-c.sh ltconfig ltmain.sh missing \
-	mkinstalldirs
+DIST_COMMON = README Makefile.am Makefile.in acconfig.h acinclude.m4 \
+	aclocal.m4 config.guess config.h.in config.sub configure \
+	configure.in depcomp install-sh ltcf-c.sh ltconfig ltmain.sh \
+	missing mkinstalldirs
 DIST_SUBDIRS = $(SUBDIRS)
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
@@ -176,7 +176,7 @@ stamp-h1: $(srcdir)/config.h.in $(top_builddir)/config.status
 	@rm -f stamp-h1
 	cd $(top_builddir) && $(SHELL) ./config.status config.h
 
-$(srcdir)/config.h.in:  $(top_srcdir)/configure.in $(ACLOCAL_M4) 
+$(srcdir)/config.h.in:  $(top_srcdir)/configure.in $(ACLOCAL_M4) $(top_srcdir)/acconfig.h
 	cd $(top_srcdir) && $(AUTOHEADER)
 	touch $(srcdir)/config.h.in
 
