--- a/Makefile.in
+++ b/Makefile.in
@@ -140,10 +140,10 @@ RECURSIVE_TARGETS = info-recursive dvi-recursive pdf-recursive \
 	all-recursive install-data-recursive install-exec-recursive \
 	installdirs-recursive install-recursive uninstall-recursive \
 	check-recursive installcheck-recursive
-DIST_COMMON = README Makefile.am Makefile.in acconfig.h acinclude.m4 \
-	aclocal.m4 config.guess config.h.in config.sub configure \
-	configure.in depcomp install-sh ltcf-c.sh ltconfig ltmain.sh \
-	missing mkinstalldirs
+DIST_COMMON = README ChangeLog Makefile.am Makefile.in acconfig.h \
+	acinclude.m4 aclocal.m4 config.guess config.h.in config.sub \
+	configure configure.in depcomp install-sh ltcf-c.sh ltconfig \
+	ltmain.sh missing mkinstalldirs
 DIST_SUBDIRS = $(SUBDIRS)
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
