--- a/configure.in
+++ b/configure.in
@@ -2,6 +2,7 @@ dnl Process this file with autoconf to produce a configure script.
 AC_INIT(src/file.c)
 AM_INIT_AUTOMAKE(file, 4.01)
 AM_CONFIG_HEADER(config.h)
+AM_MAINTAINER_MODE
 
 AC_MSG_CHECKING(for builtin ELF support)
 AC_ARG_ENABLE(elf,
