--- a/magic/Makefile.in
+++ b/magic/Makefile.in
@@ -164,7 +164,6 @@ Magdir/compress \
 Magdir/console \
 Magdir/convex \
 Magdir/ctags \
-Magdir/cvs \
 Magdir/database \
 Magdir/diamond \
 Magdir/diff \
@@ -253,6 +252,7 @@ Magdir/psdbms \
 Magdir/pulsar \
 Magdir/pyramid \
 Magdir/python \
+Magdir/revision \
 Magdir/riff \
 Magdir/rpm \
 Magdir/rtf \
