add utime/utimes support.

--- a/configure.in
+++ b/configure.in
@@ -66,6 +66,8 @@ AC_CHECK_HEADERS(stdint.h inttypes.h)
 AC_CHECK_HEADERS(unistd.h)
 AC_CHECK_HEADERS(getopt.h)
 AC_CHECK_HEADERS(locale.h)
+AC_CHECK_HEADERS(utime.h)
+AC_CHECK_HEADERS(sys/utime.h)
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
@@ -94,7 +96,7 @@ AC_CHECK_SIZEOF_STDC_HEADERS(uint32_t, 0)
 AC_CHECK_SIZEOF_STDC_HEADERS(uint64_t, 0)
 
 dnl Checks for functions
-AC_CHECK_FUNCS(mmap strerror strtoul mkstemp getopt_long)
+AC_CHECK_FUNCS(mmap strerror strtoul mkstemp getopt_long utimes utime)
 
 dnl Checks for libraries
 AC_CHECK_LIB(z,gzopen)
