--- a/magic/Makefile.in
+++ b/magic/Makefile.in
@@ -150,6 +150,7 @@ Magdir/blender \
 Magdir/blit \
 Magdir/bout \
 Magdir/bsdi \
+Magdir/cad \
 Magdir/c-lang \
 Magdir/c64 \
 Magdir/cddb \
@@ -247,6 +248,7 @@ Magdir/pdp \
 Magdir/perl \
 Magdir/pgp \
 Magdir/pkgadd \
+Magdir/plan9 \
 Magdir/plus5 \
 Magdir/printer \
 Magdir/project \
