--- a/configure.in
+++ b/configure.in
@@ -1,8 +1,8 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT
 AC_CONFIG_SRCDIR([src/file.c])
-AM_INIT_AUTOMAKE(file, 4.11)
-AC_CONFIG_HEADERS([config.h])
+AM_INIT_AUTOMAKE(file, 4.12)
+AM_CONFIG_HEADER([config.h])
 dnl AM_MAINTAINER_MODE
 
 AC_MSG_CHECKING(for builtin ELF support)
