--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -87,6 +87,7 @@ install_sh = @install_sh@
 MAGIC = $(pkgdatadir)/magic
 lib_LTLIBRARIES = libmagic.la
 include_HEADERS = magic.h
+EXTRA_DIST = test.c
 
 bin_PROGRAMS = file
 
