ole 2 compound documents redo from Lester Hightower.

--- a/magic/Makefile.in
+++ b/magic/Makefile.in
@@ -282,6 +282,7 @@ Magdir/nitpicker \
 Magdir/ocaml \
 Magdir/octave \
 Magdir/olf \
+Magdir/ole2compounddocs \
 Magdir/os2 \
 Magdir/os9 \
 Magdir/osf1 \
