--- a/magic/Makefile.in
+++ b/magic/Makefile.in
@@ -192,6 +192,7 @@ Magdir/bout \
 Magdir/bsdi \
 Magdir/btsnoop \
 Magdir/cad \
+Magdir/cafebabe \
 Magdir/c-lang \
 Magdir/c64 \
 Magdir/cddb \
@@ -282,8 +283,8 @@ Magdir/nitpicker \
 Magdir/ocaml \
 Magdir/octave \
 Magdir/olf \
-Magdir/ole2compounddocs \
 Magdir/os2 \
+Magdir/os400 \
 Magdir/os9 \
 Magdir/osf1 \
 Magdir/palm \
