--- a/config.h.in
+++ b/config.h.in
@@ -160,6 +160,9 @@
 #undef PACKAGE_VERSION
 
 /* */
+#undef SIZEOF_INT64_T
+
+/* */
 #undef SIZEOF_UINT16_T
 
 /* */
@@ -183,6 +186,11 @@
 /* Number of bits in a file offset, on hosts where this is settable. */
 #undef _FILE_OFFSET_BITS
 
+/* Enable GNU extensions on systems that have them.  */
+#ifndef _GNU_SOURCE
+# undef _GNU_SOURCE
+#endif
+
 /* Define for large files, on AIX-style hosts. */
 #undef _LARGE_FILES
 
@@ -192,13 +200,16 @@
 /* */
 #undef int32_t
 
+/* */
+#undef int64_t
+
 /* Define to a type if <wchar.h> does not define. */
 #undef mbstate_t
 
-/* Define to `long' if <sys/types.h> does not define. */
+/* Define to `long int' if <sys/types.h> does not define. */
 #undef off_t
 
-/* Define to `unsigned' if <sys/types.h> does not define. */
+/* Define to `unsigned int' if <sys/types.h> does not define. */
 #undef size_t
 
 /* */
