convert fortran to a soft test (from rrt).

--- a/magic/Makefile.am
+++ b/magic/Makefile.am
@@ -85,6 +85,7 @@ Magdir/fcs \
 Magdir/filesystems \
 Magdir/flash \
 Magdir/fonts \
+Magdir/fortran \
 Magdir/frame \
 Magdir/freebsd \
 Magdir/fsav \
