update the build system per rrt@

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,3 @@
-# don't enforce GNU packaging standards
-AUTOMAKE_OPTIONS = foreign
-
-EXTRA_DIST = LEGAL.NOTICE MAINT PORTING
+EXTRA_DIST = MAINT
 
 SUBDIRS = src magic doc python
