--- a/configure.in
+++ b/configure.in
@@ -1,9 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT
-AC_CONFIG_SRCDIR([src/file.c])
-AM_INIT_AUTOMAKE(file, 4.23)
+AC_INIT(file, 4.23, christos@zoulas.com)
+AM_INIT_AUTOMAKE
 AM_CONFIG_HEADER([config.h])
-AM_MAINTAINER_MODE
 
 AC_MSG_CHECKING(for builtin ELF support)
 AC_ARG_ENABLE(elf,
