--- a/.cvsignore
+++ b/.cvsignore
@@ -1,5 +1,14 @@
 autom4te.cache
 Makefile
+Makefile.in
+aclocal.m4
+config.guess
+config.h.in
+config.sub
+depcomp
+install-sh
+ltmain.sh
+missing
 config.h
 config.log
 config.status
