--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT(file, 4.23, christos@zoulas.com)
+AC_INIT(file, 4.23, christos@astron.com)
 AM_INIT_AUTOMAKE
 AM_CONFIG_HEADER([config.h])
 
