try to fix distcheck

--- a/magic/Makefile.am
+++ b/magic/Makefile.am
@@ -223,4 +223,4 @@ endif
 
 ${MAGIC}: $(EXTRA_DIST) $(FILE_COMPILE)
 	$(FILE_COMPILE) -C -m $(MAGIC_FRAGMENT_DIR)
-	@mv $(MAGIC_FRAGMENT_DIR).mgc $@
+	@mv $(MAGIC_FRAGMENT_BASE).mgc $@
